# chat-app-cpp

./: .gitignore  LICENSE  README.md
chat_app_client/: CMakeLists.txt  CMakePresets.json  chat_app_client.cpp  chat_app_client.h  chat_app_client.sln  chat_app_client.vcxproj  chatlogic.cpp  chatlogic.h  chatui.cpp  chatui.h  clientchatmessage.h  helpers.h  main.cpp  message_mappings.h  vcpkg.json
chat_app_server/: CMakeLists.txt  CMakePresets.json  Helpers.h  ServerMessageHandler.cpp  ServerMessageHandler.h  chat_app_cpp.cpp  chat_app_cpp.sln  chat_app_cpp.vcxproj  chat_app_cpp.vcxproj.filters  config.json  main.cpp  server.cpp  server.h  vcpkg.json
chat_app_server/Commands/: command.h  createroom.cpp  createroom.h  helpcommand.cpp  helpcommand.h  joinroomcommand.cpp  joinroomcommand.h  leaveroomcommand.cpp  leaveroomcommand.h  roomlistcommand.cpp  roomlistcommand.h  servercommand.h  setnickcommand.cpp  setnickcommand.h  whispercommand.cpp  whispercommand.h
chat_app_server/Room/: RoomContainer.cpp  RoomContainer.h
protobuf/: communication.proto
